more space when editing settings

--- a/UniFiler10/App.xaml
+++ b/UniFiler10/App.xaml
@@ -28,6 +28,7 @@
             <conv:TextEmptyToVisibleConverter x:Key="TextEmptyToVisibleConverter"/>
             <conv:IListNotEmptyToVisible x:Key="IListNotEmptyToVisible"/>
 			<conv:StringFormatterConverter x:Key="StringFormatterConverter"/>
+			<conv:ReduceWidthForText x:Key="ReduceWidthForText"/>
 			<vms:BooleanAndElevated x:Key="BooleanAndElevated"/>
 			<vms:BooleanAndElevatedToVisible x:Key="BooleanAndElevatedToVisible"/>
 		</ResourceDictionary>
